@@ -4,6 +4,8 @@
 
 == subaltern - 1.0.1   not yet released
 
+- Subaltern.add_methods(target, source)
+
 
 == subaltern - 1.0.0   released 2012/02/04
 
